--- a/app/src/main/res/layout/fragment_not_available.xml
+++ b/app/src/main/res/layout/fragment_not_available.xml
@@ -7,74 +7,64 @@
     android:background="@drawable/background_gradient_screen"
     tools:context=".views.home.NotAvailableFragment">
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
-        app:cardCornerRadius="@dimen/_15sdp">
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/_20sdp">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/_10sdp">
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="Come back next week when you are available!"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20ssp"
+            android:textStyle="bold" />
 
-            <TextView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/ptsans_regular"
+            android:justificationMode="inter_word"
+            android:text="@string/availability_change_disclaimer"
+            android:textColor="@color/textTertiary"
+            android:textSize="@dimen/_14ssp" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/button_start_matching"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardCornerRadius="@dimen/_20sdp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Come back next week when you are available!"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_30ssp"
-                android:textStyle="bold" />
+                android:background="@drawable/border_corner_left_gradient"
+                android:gravity="center"
+                android:padding="@dimen/_10sdp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:text="@string/availability_change_disclaimer"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/button_start_matching"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?attr/selectableItemBackground"
-                app:cardCornerRadius="@dimen/_50sdp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_background_gradient_dark"
-                    android:gravity="center"
-                    android:padding="@dimen/_5sdp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/sf_pro_rounded_regular"
-                        android:text="Yes, let’s start matching!"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_16ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+                    android:fontFamily="@font/darkergrotesque_bold"
+                    android:text="Yes, let’s start matching!"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18ssp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </RelativeLayout>
