--- a/app/src/main/res/drawable/border_corner_left_gradient.xml
+++ b/app/src/main/res/drawable/border_corner_left_gradient.xml
@@ -1,10 +1,17 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:topLeftRadius="@dimen/_20sdp" android:bottomLeftRadius="@dimen/_20sdp"/>
-    <gradient
-        android:angle="360"
-        android:centerY="0.50"
-        android:endColor="#B42254"
-        android:centerColor="#B42254"
-        android:startColor="#FF6FA0"
-        android:type="linear"/>
-</shape>
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/white">
+    <item>
+        <shape
+            android:shape="rectangle" >
+            <corners android:topLeftRadius="@dimen/_20sdp" android:bottomLeftRadius="@dimen/_20sdp"/>
+            <gradient
+                android:angle="360"
+                android:centerY="0.50"
+                android:endColor="#B42254"
+                android:centerColor="#B42254"
+                android:startColor="#FF6FA0"
+                android:type="linear"/>
+        </shape>
+    </item>
+</ripple>
