--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -54,10 +54,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/ptsans_regular"
-                android:hint="@string/lorem_ipsum_2"
+                android:text="Bio"
                 android:padding="@dimen/_10sdp"
                 android:textColor="@color/textSubTitle"
                 android:textSize="@dimen/_14ssp"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+
+                android:scrollbars="vertical"
                 android:background="@drawable/border_drawable"/>
 
             <TextView
