--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -60,8 +60,8 @@
                 android:textSize="@dimen/_14ssp"
                 android:gravity="top"
                 android:inputType="textMultiLine"
-
                 android:scrollbars="vertical"
+                android:lines="5"
                 android:background="@drawable/border_drawable"/>
 
             <TextView
