--- a/app/src/main/res/anim/view_hide.xml
+++ b/app/src/main/res/anim/view_hide.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" >
-    <translate
-        android:duration="1000"
-        android:fromYDelta="0"
-        android:toYDelta="100%p" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/linear_interpolator">
+    <alpha
+        android:duration="200"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.1" >
+    </alpha>
 </set>
