feat: add custom ripple effect when each prompt q/a is clicked in Update Profile screen

--- a/app/src/main/res/drawable/border_drawable.xml
+++ b/app/src/main/res/drawable/border_drawable.xml
@@ -1,3 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="1dip" android:color="#E6E6E6"/>
-</shape>
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#B42254">
+    <item>
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="1dip"
+                android:color="#E6E6E6"/>
+        </shape>
+    </item>
+</ripple>
