--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -91,7 +91,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_prompts"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_20sdp"/>
 
 <!--            <LinearLayout-->
 <!--                android:layout_width="match_parent"-->
