--- a/app/src/main/res/layout/row_edit_profile_left.xml
+++ b/app/src/main/res/layout/row_edit_profile_left.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
-            android:src="@drawable/ic_delete"
+            android:src="@drawable/ic_delete_gradient"
             android:layout_gravity="center"/>
     </androidx.cardview.widget.CardView>
     <com.google.android.material.card.MaterialCardView
