--- a/app/src/main/res/layout/row_edit_profile_right.xml
+++ b/app/src/main/res/layout/row_edit_profile_right.xml
@@ -16,7 +16,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_delete" />
+            android:src="@drawable/ic_delete_gradient" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.card.MaterialCardView
