--- a/app/src/main/res/layout/row_layout_profile_prompts.xml
+++ b/app/src/main/res/layout/row_layout_profile_prompts.xml
@@ -1,29 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_marginTop="@dimen/_5sdp"
-    android:padding="@dimen/_10sdp"
-    android:background="@drawable/border_drawable"
-    android:clickable="true"
-    android:focusable="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/text_promp_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/textSubTitle"
-        android:textSize="@dimen/_14ssp"
-        android:fontFamily="@font/ptsans_bold"
-        app:drawableEndCompat="@drawable/ic_arrow_down" />
+    <ImageView
+        android:id="@+id/button_delete"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:src="@drawable/ic_delete_gradient"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:clickable="true"
+        android:focusable="true"/>
 
-    <TextView
-        android:id="@+id/text_answer_profile"
+    <LinearLayout
+        android:id="@+id/linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/textSubTitle"
-        android:textSize="@dimen/_14ssp"
-        android:fontFamily="@font/ptsans_regular" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:padding="@dimen/_10sdp"
+        android:background="@drawable/border_drawable"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_toStartOf="@id/button_delete">
+
+        <TextView
+            android:id="@+id/text_promp_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textSubTitle"
+            android:textSize="@dimen/_14ssp"
+            android:fontFamily="@font/ptsans_bold"
+            app:drawableEndCompat="@drawable/ic_arrow_down" />
+
+        <TextView
+            android:id="@+id/text_answer_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textSubTitle"
+            android:textSize="@dimen/_14ssp"
+            android:fontFamily="@font/ptsans_regular" />
+
+    </LinearLayout>
+
+</RelativeLayout>
