--- a/app/src/main/res/layout/row_layout_profile_prompts.xml
+++ b/app/src/main/res/layout/row_layout_profile_prompts.xml
@@ -29,22 +29,45 @@
         android:focusable="true"
         android:layout_toStartOf="@id/button_delete">
 
-        <TextView
-            android:id="@+id/text_promp_profile"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_14ssp"
-            android:fontFamily="@font/ptsans_bold"
-            app:drawableEndCompat="@drawable/ic_arrow_down" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text_answer_profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_14ssp"
-            android:fontFamily="@font/ptsans_regular" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/photo_image_view">
+                <TextView
+                    android:id="@+id/text_promp_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textSubTitle"
+                    android:textSize="@dimen/_14ssp"
+                    android:fontFamily="@font/ptsans_regular"
+                    app:drawableEndCompat="@drawable/ic_arrow_right" />
+
+                <TextView
+                    android:id="@+id/text_answer_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textSubTitle"
+                    android:textSize="@dimen/_16ssp"
+                    android:fontFamily="@font/darkergrotesque_semibold" />
+            </LinearLayout>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photo_image_view"
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/photo_placeholder_1" />
+        </RelativeLayout>
 
     </LinearLayout>
 
