--- a/app/src/main/res/layout/fragment_matching_phase.xml
+++ b/app/src/main/res/layout/fragment_matching_phase.xml
@@ -7,45 +7,42 @@
     android:background="@drawable/background_gradient_screen"
     tools:context=".views.home.MatchingPhaseFragment">
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_margin="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        app:cardCornerRadius="@dimen/_15sdp">
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/_20sdp">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/_10sdp">
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="Currently we are in our dating phase."
+            android:textColor="@color/black"
+            android:textSize="@dimen/_20ssp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Currently we are in our dating phase."
-                android:textColor="@color/black"
-                android:textSize="@dimen/_30ssp"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:fontFamily="@font/ptsans_regular"
+            android:text="@string/dating_phase_disclaimer"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14ssp"
+            android:justificationMode="inter_word"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:text="@string/dating_phase_disclaimer"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
+    </LinearLayout>
 
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
